--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation platform("io.micronaut:micronaut-bom:$micronautVersion")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}"
     implementation "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.3.3"
     implementation "io.micronaut:micronaut-runtime"
     implementation "io.micronaut:micronaut-http-server-netty"
     implementation "io.micronaut:micronaut-http-client"
@@ -40,18 +41,25 @@ dependencies {
     testImplementation platform("io.micronaut:micronaut-bom:$micronautVersion")
     testImplementation "io.micronaut.test:micronaut-test-kotlintest"
     testImplementation "io.mockk:mockk:1.9.3"
-    testImplementation "io.kotlintest:kotlintest-runner-junit5:3.3.2"
 
     runtimeOnly "org.postgresql:postgresql:42.2.9"
-
-
     compile 'io.ebean:ebean:12.1.9'
     compile 'io.ebean:ebean-querybean:12.1.9'
-
     // query bean generation
     kapt 'io.ebean:kotlin-querybean-generator:12.1.9'
 
     testCompile 'io.ebean:ebean-test:12.1.9'
+
+    testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"
+    testImplementation ("org.spekframework.spek2:spek-dsl-jvm:$spekVersion") {
+        exclude group: 'org.jetbrains.kotlin'
+    }
+    testRuntimeOnly ("org.spekframework.spek2:spek-runner-junit5:$spekVersion") {
+        exclude group: 'org.junit.platform'
+        exclude group: 'org.jetbrains.kotlin'
+    }
+
+    testCompile "ch.tutteli.atrium:atrium-cc-en_GB-robstoll:$atriumVersion"
 }
 
 test.classpath += configurations.developmentOnly
@@ -59,7 +67,9 @@ test.classpath += configurations.developmentOnly
 mainClassName = "com.allangomes.microebean.Application"
 
 test {
-    useJUnitPlatform()
+    useJUnitPlatform {
+        includeEngines 'spek2'
+    }
 }
 
 allOpen {
